zebra-rpc/src/methods/tests/snapshots/get_asset_state@mainnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: asset_state
---
{
  "supply": {
    "is_finalized": true,
    "total_supply": 1000
  },
  "reference_note": "0202020202020202020202020202020202020202020202020202020202020202"
}