zebra-rpc/src/methods/tests/snapshots/get_block_verbose_hash_verbosity_2@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 867
expression: block
---
{
  "hash": "025579869bcf52a989337342f5f57a84f3a28b968f7d6a8307902b065a668d23",
  "confirmations": 10,
  "size": 1618,
  "height": 1,
  "version": 4,
  "merkleroot": "f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75",
  "blockcommitments": "0000000000000000000000000000000000000000000000000000000000000000",
  "finalsaplingroot": "0000000000000000000000000000000000000000000000000000000000000000",
  "nTx": 1,
  "tx": [
    {
      "in_active_chain": true,
      "hex": "01000000010000000000000000000000000000000000000000000000000000000000000000ffffffff03510101ffffffff0250c30000000000002321025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99acd43000000000000017a914ef775f1f997f122a062fff1a2d7443abd1f9c6428700000000",
      "height": 1,
      "confirmations": 10,
      "vin": [
        {
          "coinbase": "510101",
          "sequence": 4294967295
        }
      ],
      "vout": [
        {
          "value": 0.0005,
          "valueZat": 50000,
          "n": 0,
          "scriptPubKey": {
            "asm": "025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99 OP_CHECKSIG",
            "hex": "21025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99ac",
            "type": "pubkey"
          }
        },
        {
          "value": 0.000125,
          "valueZat": 12500,
          "n": 1,
          "scriptPubKey": {
            "asm": "OP_HASH160 ef775f1f997f122a062fff1a2d7443abd1f9c642 OP_EQUAL",
            "hex": "a914ef775f1f997f122a062fff1a2d7443abd1f9c64287",
            "reqSigs": 1,
            "type": "scripthash",
            "addresses": [
              "t2UNzUUx8mWBCRYPRezvA363EYXyEpHokyi"
            ]
          }
        }
      ],
      "vShieldedSpend": [],
      "vShieldedOutput": [],
      "vjoinsplit": [],
      "orchard": {
        "actions": [],
        "valueBalance": 0.0,
        "valueBalanceZat": 0
      },
      "valueBalance": 0.0,
      "valueBalanceZat": 0,
      "size": 130,
      "time": 1477674473,
      "txid": "f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75",
      "overwintered": false,
      "version": 1,
      "locktime": 0,
      "blockhash": "025579869bcf52a989337342f5f57a84f3a28b968f7d6a8307902b065a668d23",
      "blocktime": 1477674473
    }
  ],
  "time": 1477674473,
  "nonce": "0000e5739438a096ca89cde16bcf6001e0c5a7ce6f7c591d26314c26c2560000",
  "solution": "0053f4438864bc5d6dfc009d4bba545ac5e5feaaf46f9455b975b02115f842a966e26517ce678f1c074d09cc8d0049a190859eb505af5f3e760312fbbe54da115db2bc03c96408f39b679891790b539d2d9d17a801dc6af9af14ca3f6ba060edce2a1dd45aa45f11fe37dbaf1eb2647ae7c393f6680c3d5d7e53687e34530f48edf58924a04d3e0231c150b1c8218998f674bc171edd222bcb4ac4ba4ea52d7baa86399f371d5284043e1e166f9069dd0f2904ff94c7922a70fa7c660e0553cc40a20d9ee08eb3f47278485801ddae9c270411360773f0b74e03db2d92c50952c9bd4924bbca2a260e1235e99df51fe71e75744232f2d641ef94f394110a5ad05f51a057e4cb515b92c16cb1404a8cdcc43d4a4bb2caa54ca35dccf41aa7d832da65123b7029223c46ed2a13387d598d445435d3cb32fdad9e27672903864c90d86353b162033078327b5b7aaffc89b40096ae004f2d5c6bd2c99188574348518db66e9b6020f93f12ee1c06f7b00fe346fefceaffb1da9e3cdf08285057f549733eb10825737fcd1431bfdfb155f323f24e95a869212baacf445b30f2670206645779110e6547d5da90a5f2fe5151da911d5ecd5a833023661d1356b6c395d85968947678d53efd4db7b06f23b21125e74492644277ea0c1131b80d6a4e3e8093b82332556fbb3255a55ac3f0b7e4844c0e12bf577c37fd02323ae5ef4781772ed501d63b568032a3d31576c5104a48c01ac54f715286932351a8adc8cf2467a84a0572e99f366ee00f82c3735545fd4bb941d591ce70070425a81304272db89887949bc7dd8236bb7e82190f9815da938cd6e8fec7660e91354326a7a9bfe38120e97997fca3c289d54513ed00286c2b825fbe84f91a39528f335674b5e957425a6edfdd00f2feb2c2df575616197998c1e964e069875d4d934f419a9b02b100848d023b76d47bd4e284c3895ef9227a40d8ea8826e86c7155d6aa95b8f9175812523a32cd611efc700688e03f7c245c5bff01718281b5d75cefe8318b2c08962236b14a0bf79534c203df735fd9cced97cbae07c2b4ee9cda8c9993f3f6277ff3fec261fb94d3961c4befe4b0893dcf67b312c7d8d6ff7adc8539cb2b1d3534fccf109efddd07a9f1e77b94ab1e505b164221dca1c34621b1e9d234c31a032a401267d95f65b800d579a2482638dfeade804149c81e95d7ef5510ac0b6212231506b1c635a2e1d2f0c9712989f9f246762fadb4c55c20f707dcc0e510a33e9465fc5d5bdbfa524dab0d7a1c6a1baaa36869cf542aa2257c5c44ef07547a570343442c6091e13bc04d559dc0e6db5b001861914bf956816edce2a86b274bd97f27e2dbb08608c16a3e5d8595952faa91fb162d7fa6a7a47e849a1ad8fab3ba620ee3295a04fe13e5fb655ac92ae60d01020b8999526af8d56b28733e69c9ffb285de27c61edc0bf62261ac0787eff347d0fcd62257301ede9603106ea41650a3e3119bd5c4e86a7f6a3f00934f3a545f7f21d41699f3e35d38cf925a8bdaf2bf7eedea11c31c3d8bf6c527c77c6378281cdf02211a58fa5e46d28d7e7c5fb79d69b31703fd752395da115845952cf99aaeb2155c2ab951a69f67d938f223185567e52cfa3e57b62c790bf78674c4b02c12b7d3225fe8f705b408ba11c24245b3924482e2f3480994461b550641a88cd941d371139f3498afacdcba1249631402b20695760eaada5376e68df0e45139c410700effc9420dc3726515e7fcb3f349320f30511451964bd9b6530682efec65910ceb548aa2ab05ac3309e803161697213631ae8e13cc7d223ac28446c1bf94a19a8782ac16ff57df7ee4f10fb6e488c02c68d6b6dee6987f6d2c39227da366c59f54ff67e312ca530e7c467c3dc8",
  "bits": "2007ffff",
  "difficulty": 1.0,
  "chainSupply": {
    "chainValue": 0.000625,
    "chainValueZat": 62500,
    "monitored": true
  },
  "valuePools": [
    {
      "id": "transparent",
      "chainValue": 0.000625,
      "chainValueZat": 62500,
      "monitored": true,
      "valueDelta": 0.000625,
      "valueDeltaZat": 62500
    },
    {
      "id": "sprout",
      "chainValue": 0.0,
      "chainValueZat": 0,
      "monitored": false,
      "valueDelta": 0.0,
      "valueDeltaZat": 0
    },
    {
      "id": "sapling",
      "chainValue": 0.0,
      "chainValueZat": 0,
      "monitored": false,
      "valueDelta": 0.0,
      "valueDeltaZat": 0
    },
    {
      "id": "orchard",
      "chainValue": 0.0,
      "chainValueZat": 0,
      "monitored": false,
      "valueDelta": 0.0,
      "valueDeltaZat": 0
    },
    {
      "id": "lockbox",
      "chainValue": 0.0,
      "chainValueZat": 0,
      "monitored": false,
      "valueDelta": 0.0,
      "valueDeltaZat": 0
    }
  ],
  "trees": {},
  "previousblockhash": "05a60a92d99d85997cce3b87616c089f6124d7342af37106edc76126334a2c38",
  "nextblockhash": "00f1a49e54553ac3ef735f2eb1d8247c9a87c22a47dbd7823ae70adcd6c21a18"
}
