zebra-rpc/src/methods/tests/snapshots/get_health_info_status@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 808
expression: status_only
---
{
  "status": "healthy"
}
