zebra-rpc/src/methods/tests/snapshots/get_health_info_status@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 556
expression: status_only
---
{
  "status": "healthy"
}
